assets/assets/css/main.css
@charset "UTF-8";

/* Custom typeface — Inter (body text) */

/* Regular */
@font-face {
  font-family: "Inter";
  src: url("../fonts/inter-regular.woff2") format("woff2");
  font-weight: 400;
  font-style: normal;
  font-display: swap;
}

/* Italic */
@font-face {
  font-family: "Inter";
  src: url("../fonts/inter-italic.woff2") format("woff2");
  font-weight: 400;
  font-style: italic;
  font-display: swap;
}

/* Extra Bold */
@font-face {
  font-family: "Inter";
  src: url("../fonts/inter-800.woff2") format("woff2");
  font-weight: 800;
  font-style: normal;
  font-display: swap;
}

/* Extra Bold Italic */
@font-face {
  font-family: "Inter";
  src: url("../fonts/inter-800-italic.woff2") format("woff2");
  font-weight: 800;
  font-style: italic;
  font-display: swap;
}

/* Black */
@font-face {
  font-family: "Inter";
  src: url("../fonts/inter-900.woff2") format("woff2");
  font-weight: 900;
  font-style: normal;
  font-display: swap;
}

/* Custom typeface — Google Sans Code (code) */

/* Regular */
@font-face {
  font-family: "GoogleSansCode";
  src: url("../fonts/GoogleSansCode-Regular.woff2") format("woff2");
  font-weight: 400;
  font-style: normal;
  font-display: swap;
}

/* Italic */
@font-face {
  font-family: "GoogleSansCode";
  src: url("../fonts/GoogleSansCode-Italic.woff2") format("woff2");
  font-weight: 400;
  font-style: italic;
  font-display: swap;
}

/* Bold */
@font-face {
  font-family: "GoogleSansCode";
  src: url("../fonts/GoogleSansCode-Bold.woff2") format("woff2");
  font-weight: 700;
  font-style: normal;
  font-display: swap;
}

/* Bold Italic */
@font-face {
  font-family: "GoogleSansCode";
  src: url("../fonts/GoogleSansCode-BoldItalic.woff2") format("woff2");
  font-weight: 700;
  font-style: italic;
  font-display: swap;
}

/* Custom typeface — Perfect Time (logo) */

@font-face {
  font-family: "Perfect Time";
  src: url("../fonts/perfect-time.woff2") format("woff2");
  font-weight: 400;
  font-style: normal;
  font-display: block;
}

/* Global styles */

html {
  color-scheme: dark light;
}

:root {
  --main-color: #161616;
  --bg-color: #f3f3f3;
  --neutral-color: rgba(153, 153, 153, 0.2);
  --link-color: #0069d9;
  --thin-border: 0.07rem solid var(--main-color);
  --thick-border: 0.1rem solid var(--main-color);
  --rounded-edges: 0.5em;
  --focus-outline: 0.1rem solid var(--link-color);
}

html[data-theme="dark"] {
  --main-color: #dedede;
  --bg-color: #2b2b2b;
  --link-color: #ff5faa;
  #guestbook {
    filter: invert(1);
    mix-blend-mode: lighten;
  }
  #theme-toggle > img {
    transform: translateX(1.2em);
  }
  .icon {
    color: var(--bg-color); /* alt text color */
    filter: invert(1);
  }
  a:has(> .icon) {
    text-decoration-color: var(--bg-color);
  }
  .teal {
    color: #00d1b4;
  }
  .text-colored {
    color: greenyellow;
  }
}

@media screen and (prefers-reduced-motion: no-preference) {
  /* Smooth scrolling 
  IF user doesn't have a preference 
  due to motion sensitivities */
  html {
    scroll-behavior: smooth;
  }
}

body {
  background-color: var(--bg-color);
  color: var(--main-color);
  font-family: "Inter", "Segoe UI", sans-serif;
  font-size: 1rem;
  font-weight: 400;
  line-height: 160%;
  scrollbar-gutter: stable;
  overflow-y: scroll;
}

* {
  margin: 0;
  transition: all 0.3s;
  scrollbar-color: gray var(--bg-color);
}

.noscript > p {
  padding: 1em;
  color: rgb(170, 0, 0);
  background-color: rgb(255, 221, 221);
  text-align: center;
}

#skip-link {
  position: absolute;
  inset-inline-start: -10000px;
  inset-block-start: auto;
  inline-size: 1px;
  block-size: 1px;
  overflow: hidden;
  &:focus-visible {
    position: fixed;
    inset-block-start: 0.1em;
    inset-inline-start: 0.1em;
    inline-size: auto;
    block-size: auto;
  }
}

/* Layout */

#flex-container {
  display: flex;
  gap: 4em;
  padding: 3em;
  margin: 0 auto;
  max-inline-size: fit-content;
  @media (max-width: 1200px) {
    flex-direction: column;
  }
}

#left-column,
#right-column {
  display: flex;
  flex-direction: column;
  flex-shrink: 0;
  white-space: nowrap;
  padding: 0 0.5em;
  position: sticky;
  inset-block-start: 3em;
  min-inline-size: 10em;
  /* code for vertical scrollbar to appear when needed */
  max-block-size: calc(100vh - 7em);
  overflow-y: auto;
  overflow-x: hidden;
  scrollbar-width: thin;
  @media (max-width: 1200px) {
    position: static;
  }
}

#left-column {
  gap: 1.7em;
}

#center-column {
  inline-size: 38em;
  flex: 4;
  @media (max-width: 1200px) {
    max-inline-size: 100%;
  }
}

#right-column {
  gap: 2em;
}

#logo {
  font-family: "Perfect Time", cursive;
  font-size: 2.5em;
  line-height: 0.9em;
  color: var(--main-color);
  text-decoration: none;
  inline-size: fit-content;
  margin-block-start: 0.1em;
}

nav {
  display: flex;
  flex-direction: column;
  gap: inherit;
  > div {
    display: flex;
    flex-direction: column;
    > #gallery {
      /* details element */
      border: none;
      border-radius: 0;
      &[open]::details-content {
        max-block-size: 4.8em;
      }
      > * {
        padding: 0;
        margin: 0;
      }
      > a {
        padding-inline-start: 1em;
      }
      > summary:hover {
        background-color: revert-layer;
      }
    }
  }
  a {
    text-decoration: none;
    color: var(--main-color);
    display: block;
    inline-size: fit-content;
    &:hover {
      color: var(--link-color);
    }
  }
}

/* Disable transitions during restore */
html.restore-menu-open #gallery {
  transition: none;
  &::details-content {
    transition: none;
  }
  > summary::after {
    transition: none;
  }
}
/* ... */

